--- a/styles/_vars.scss
+++ b/styles/_vars.scss
@@ -18,3 +18,4 @@ $ltGradient: linear-gradient(160deg, #ffe3e4 0%, rgba(255, 227, 228, 0) 50%);
 $defaultTransitionTime: 0.23s;
 
 $headerZIndex: 2;
+$overlayZIndex: 3;
