--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -3,6 +3,10 @@ body {
   position: relative;
   min-height: 100%;
   overflow-x: clip;
+  &.no-scroll {
+    overflow-x: unset;
+    overflow: hidden;
+  }
 }
 
 body {
