--- a/styles/UI/_form.scss
+++ b/styles/UI/_form.scss
@@ -13,6 +13,7 @@
     align-items: flex-start;
     justify-content: start;
     gap: 8px;
+    font-size: 14px;
   }
 
   &__input {
@@ -57,6 +58,11 @@
       &:hover {
         text-decoration-color: transparent;
       }
+    }
+  }
+  @media (max-width: 768px) {
+    &__label {
+      font-size: 12px;
     }
   }
 }
