--- a/styles/UI/_heading.scss
+++ b/styles/UI/_heading.scss
@@ -13,6 +13,12 @@
     font-weight: 700;
     line-height: normal;
   }
+  @media (max-width: 768px) {
+    font-size: 32px;
+    span {
+      font-size: inherit;
+    }
+  }
 
   @media (max-width: 525px) {
     font-size: 24px;
