--- a/styles/_agency.scss
+++ b/styles/_agency.scss
@@ -28,4 +28,17 @@
   &__subtext {
     @extend .features-section__subtext;
   }
+  @media (max-width: 960px) {
+    &__wrapper {
+      padding-top: 64px;
+      background-size: 40%;
+    }
+  }
+  @media (max-width: 768px) {
+    &__wrapper {
+      justify-content: center;
+      padding-bottom: 440px;
+      background-position: bottom 64px center;
+    }
+  }
 }
