--- a/styles/_only.scss
+++ b/styles/_only.scss
@@ -5,7 +5,7 @@
   background-image: url('../assets/img/gradient-line-2.png');
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 100% 339px;
+  background-size: cover;
   &__wrapper {
     flex-direction: column;
     align-items: center;
