--- a/styles/_try.scss
+++ b/styles/_try.scss
@@ -5,7 +5,7 @@
   background-image: url('../assets/img/gradient-line.png');
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 100% 339px;
+  background-size: cover;
   &__wrapper {
     position: relative;
     z-index: 2;
@@ -27,5 +27,10 @@
     color: $white;
     font-size: 24px;
     font-weight: 300;
+  }
+  @media (max-width: 768px) {
+    &__text {
+      font-size: 20px;
+    }
   }
 }
