--- a/styles/UI/_header.scss
+++ b/styles/UI/_header.scss
@@ -7,6 +7,19 @@
   z-index: $headerZIndex;
   border-bottom: 1px solid $gray;
   background-color: $white;
+  &__mobile-btn {
+    display: none;
+    color: $accent;
+    leading-trim: both;
+    text-edge: cap;
+    font-family: $mainFont;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    border: none;
+    background: none;
+  }
   &__wrapper {
     justify-content: space-between;
     @media (max-width: 525px) {
@@ -16,5 +29,19 @@
   @media (max-width: 525px) {
     box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.08);
     border-bottom: none;
+    padding-top: 46px;
+    &__logo-link {
+      svg {
+        max-width: 183px;
+      }
+    }
+    &__mobile-btn {
+      display: initial;
+    }
+    &__lang-menu.lang-menu {
+      top: 12px;
+      right: 12px;
+      position: absolute;
+    }
   }
 }
