--- a/styles/_promo.scss
+++ b/styles/_promo.scss
@@ -71,4 +71,12 @@
       text-align: center;
     }
   }
+  @media (max-width: 475px) {
+    &__wrapper {
+      padding-top: 433px;
+      background-position: top 17px center;
+      background-size: 189px;
+      justify-content: center;
+    }
+  }
 }
