--- a/styles/_try.scss
+++ b/styles/_try.scss
@@ -26,11 +26,14 @@
     margin-bottom: 32px;
     color: $white;
     font-size: 24px;
+    text-align: center;
     font-weight: 300;
   }
   @media (max-width: 768px) {
     &__text {
       font-size: 20px;
     }
+  }
+  @media (max-width: 675px) {
   }
 }
