f: header, spaces in links

--- a/styles/_promo.scss
+++ b/styles/_promo.scss
@@ -73,8 +73,8 @@
   }
   @media (max-width: 475px) {
     &__wrapper {
-      padding-top: 433px;
-      background-position: top 17px center;
+      // padding-top: 433px;
+      // background-position: top 17px center;
       background-size: 189px;
       justify-content: center;
     }
